Fixed spacing on project page on mobile

--- a/src/styles/scss/base/_base.scss
+++ b/src/styles/scss/base/_base.scss
@@ -37,8 +37,8 @@ select {
 	display: flex;
 	flex-grow: 3;
 	justify-content: center;
-	margin-bottom: 1rem;
-	margin-top: 1rem;
+	margin-bottom: 1.25rem;
+	margin-top: 1.25rem;
 	max-height: 100%;
 	position: relative;
 
